<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="action_settings">Setting</string>
    <string name="action_AddInput">Add Input</string>
    <string name="action_favorite">ActionFavorite</string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action1">Action1</string>
    <string name="action2">Action2</string>
    <string name="action3">Action3</string>
    <string name="action4">Action4</string>

    <string name="action4_sub1">Action4 Sub1</string>
    <string name="action4_sub2">Action4 Sub2</string>
    <string name="action4_sub3">Action4 Sub3</string>

    <string name="action3_sub1">Action3 Sub1</string>
    <string name="action3_sub2">Action3 Sub2</string>
    <string name="action3_sub3">Action3 Sub3</string>


    <string name="gpsMenuLabel">Location</string>
    <string name="climateMenuLabel">Climate</string>
    <string name="lightsMenuLabel">Lights</string>
    <string name="timersMenuLabel">Timers</string>
    <string name="configMenuLabel">Configurations</string>
    <string name="quickActionsMenuLabel">Quick Actions</string>
    <string name="inputs">Inputs</string>
    <string name="actions">Actions</string>

    <string name="button_connect">Connect to AWS</string>
    <string name="txt_view">Connection Status</string>

    <string name="AC_topic">AWS/AC</string>
    <string name="tv_topic">AWS/TV</string>
    <string name="Lights_topic">AWS/Lights</string>
    <string name="Boiler_topic">AWS/Boiler</string>
    <string name="Security_topic">AWS/Security</string>

</resources>
