<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickFunc"
    tools:context="com.example.oitzh.myapplication.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintHorizontal_bias="0.0" />


    <ImageButton
        android:id="@+id/gpsBtn"
        android:layout_width="108dp"
        android:layout_height="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="109dp"
        android:adjustViewBounds="true"
        android:background="@drawable/roundedbutton"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        android:tag="Location"
        app:layout_constraintBottom_toBottomOf="@+id/climateBtn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/climateBtn"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_map_marker" />

    <ImageButton
        android:id="@+id/climateBtn"
        android:layout_width="121dp"
        android:layout_height="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="105dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/lightsBtn"
        app:layout_constraintLeft_toRightOf="@+id/gpsBtn"
        app:layout_constraintRight_toLeftOf="@+id/lightsBtn"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/climate_btn" />

    <ImageButton
        android:id="@+id/lightsBtn"
        android:layout_width="114dp"
        android:layout_height="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toRightOf="@+id/climateBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/light_bulb_btn" />

    <TextView
        android:id="@+id/gpsText"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="0dp"
        android:text="@string/gpsMenuLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toTopOf="@+id/gpsBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@+id/gpsBtn"
        app:layout_constraintRight_toLeftOf="@+id/climateBtn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/climateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Climate"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintRight_toLeftOf="@+id/lightsBtn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/climateBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/gpsText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/lightsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Lights"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintRight_toRightOf="@+id/lightsBtn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/lightsBtn"
        app:layout_constraintBottom_toBottomOf="@+id/climateText"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/timerBtn"
        android:layout_width="104dp"
        android:layout_height="116dp"
        android:layout_marginBottom="-12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/configBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/configBtn"
        app:srcCompat="@drawable/timers_btn" />

    <ImageButton
        android:id="@+id/quickActionBtn"
        android:layout_width="119dp"
        android:layout_height="116dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toRightOf="@+id/configBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/qck_action_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="93dp"
        app:layout_constraintHorizontal_bias="0.54" />

    <ImageButton
        android:id="@+id/configBtn"
        android:layout_width="146dp"
        android:layout_height="116dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClickFunc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/quickActionBtn"
        app:layout_constraintLeft_toRightOf="@+id/timerBtn"
        app:layout_constraintRight_toLeftOf="@+id/quickActionBtn"
        app:srcCompat="@drawable/config_btn" />

    <TextView
        android:id="@+id/timersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/timersMenuLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/configText"
        app:layout_constraintLeft_toLeftOf="@+id/timerBtn"
        app:layout_constraintRight_toLeftOf="@+id/configBtn"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.095" />

    <TextView
        android:id="@+id/configText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/configMenuLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/qckActionText"
        app:layout_constraintLeft_toLeftOf="@+id/configBtn"
        app:layout_constraintRight_toRightOf="@+id/configBtn"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/qckActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/quickActionsMenuLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toTopOf="@+id/quickActionBtn"
        app:layout_constraintLeft_toRightOf="@+id/configBtn"
        app:layout_constraintRight_toRightOf="@+id/quickActionBtn"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="-9dp"
        android:layout_marginTop="24dp"
        android:text="@string/inputs"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/gpsText"
        app:layout_constraintLeft_toLeftOf="@+id/gpsBtn"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="24dp"
        android:text="@string/actions"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/timersText"
        app:layout_constraintLeft_toLeftOf="@+id/timerBtn"
        app:layout_constraintTop_toBottomOf="@+id/gpsBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="1dp"
        android:onClick="submitData"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
